<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:splitMotionEvents="true"
    android:background="@drawable/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/log"
        android:layout_width="153dp"
        android:layout_height="44dp"
        android:layout_marginTop="132dp"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame"
        android:layout_width="410dp"
        android:layout_height="400dp"
        android:background="@drawable/white_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log"
        app:layout_constraintVertical_bias="0.042">

        <EditText
            android:id="@+id/username"
            android:layout_width="344dp"
            android:layout_height="55dp"
            android:layout_marginTop="60dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="344dp"
            android:layout_height="55dp"
            android:layout_marginTop="28dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/repassword"
            android:layout_width="344dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/btnsignin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnsignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginLeft="52dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rounded_edittext"
            android:text="@string/registration"
            android:textColor="#F3EFEF"
            android:textStyle="bold"
            app:backgroundTint="#0E0E0E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repassword"
            app:layout_constraintVertical_bias="0.607" />

        <Button
            android:id="@+id/btnsignin"
            android:layout_width="110dp"
            android:layout_height="49dp"
            android:layout_marginBottom="44dp"
            android:background="@drawable/rounded_edittext"
            android:text="@string/login"
            android:textColor="#F3EFEF"
            android:textStyle="bold"
            app:backgroundTint="#0E0E0E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toEndOf="@+id/btnsignup" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>