<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black"
    tools:context=".menu">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/white_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394">

        z

        <Button
            android:id="@+id/sport"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/rounded_edittext"
            android:text="@string/sport"
            android:textColor="#F6EFEF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="#ED5D31"
            app:iconTint="#F3EAEA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="26dp"
            android:background="@drawable/rounded_edittext"
            android:text="@string/history"
            android:textColor="#F6F2F2"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="#ED5D31"
            app:iconTint="#FBF7F7"
            app:layout_constraintBottom_toTopOf="@+id/button5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.945"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sport" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginTop="26dp"
            android:background="@drawable/rounded_edittext"
            android:text="@string/science"
            android:textColor="#EDE5E5"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="#ED5D31"
            app:iconTint="#F3EDED"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/rounded_edittext"
            android:text="@string/maths"
            android:textColor="#F4EBEB"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="#ED5D31"
            app:iconTint="#FAF5F5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>