<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:splitMotionEvents="true"
    android:background="@drawable/black"
    tools:context=".Login">

    <TextView
        android:id="@+id/login"
        android:layout_width="153dp"
        android:layout_height="44dp"
        android:layout_marginTop="152dp"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="410dp"
        android:layout_height="350dp"
        android:background="@drawable/white_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"


        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.042">

        <EditText
            android:id="@+id/username1"
            android:layout_width="344dp"
            android:layout_height="55dp"
            android:layout_marginTop="64dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password1"
            android:layout_width="344dp"
            android:layout_height="55dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username1" />

        <Button
            android:id="@+id/btnsignin1"
            android:layout_width="116dp"
            android:layout_height="50dp"
            android:layout_marginStart="52dp"
            android:layout_marginLeft="52dp"
            android:layout_marginTop="52dp"
            android:background="@drawable/rounded_edittext"
            android:text="@string/login"
            android:textColor="#F4EFEF"
            android:textStyle="bold"
            app:backgroundTint="#10100F"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password1" />

        <Button
            android:id="@+id/btnsignup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="52dp"
            android:layout_marginRight="52dp"
            android:background="@drawable/rounded_edittext"
            android:text="@string/registration"
            android:textColor="#F6F0F0"
            android:textColorHint="#FFFFFF"
            android:textStyle="bold"
            app:backgroundTint="#10100F"
            app:iconTint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.723"
            app:layout_constraintStart_toEndOf="@+id/btnsignin1"
            app:layout_constraintTop_toBottomOf="@+id/password1" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>